testdata/baselines/reference/submodule/conformance/jsDeclarationsTypedefPropertyAndExportAssignment.errors.txt
index.js(1,39): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
index.js(15,16): error TS2304: Cannot find name 'TaskGroup'.
index.js(16,16): error TS2304: Cannot find name 'TaskNode'.
index.js(21,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== index.js (4 errors) ====
    const {taskGroups, taskNameToGroup} = require('./module.js');
                                          ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    /** @typedef {import('./module.js').TaskGroup} TaskGroup */
    
    /**
     * @typedef TaskNode
     * @prop {TaskNode[]} children
     * @prop {TaskNode|undefined} parent
     * @prop {TaskGroup} group
     */
    
    /** @typedef {{timers: Map<string, TaskNode>}} PriorTaskData */
    class MainThreadTasks {
        /**
         * @param {TaskGroup} x
                   ~~~~~~~~~
!!! error TS2304: Cannot find name 'TaskGroup'.
         * @param {TaskNode} y
                   ~~~~~~~~
!!! error TS2304: Cannot find name 'TaskNode'.
         */
        constructor(x, y){}
    }
    
    module.exports = MainThreadTasks;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
==== module.js (0 errors) ====
    /** @typedef {'parseHTML'|'styleLayout'} TaskGroupIds */
    
    /**
     * @typedef TaskGroup
     * @property {TaskGroupIds} id
     * @property {string} label
     * @property {string[]} traceEventNames
     */
    
    /**
     * @type {{[P in TaskGroupIds]: {id: P, label: string}}}
     */
    const taskGroups = {
        parseHTML: {
            id: 'parseHTML',
            label: 'Parse HTML & CSS'
        },
        styleLayout: {
            id: 'styleLayout',
            label: 'Style & Layout'
        },
    }
    
    /** @type {Object<string, TaskGroup>} */
    const taskNameToGroup = {};
    
    module.exports = {
        taskGroups,
        taskNameToGroup,
    };